tests/ui/traits/negative-bounds/opaque-type-unsatisfied-bound.stderr
error[E0277]: the size for values of type `()` cannot be known at compilation time
  --> $DIR/opaque-type-unsatisfied-bound.rs:15:16
   |
LL | fn weird0() -> impl Sized + !Sized {}
   |                ^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait bound `(): !Sized` is not satisfied

error[E0277]: the size for values of type `()` cannot be known at compilation time
  --> $DIR/opaque-type-unsatisfied-bound.rs:15:36
   |
LL | fn weird0() -> impl Sized + !Sized {}
   |                                    ^^ doesn't have a size known at compile-time
   |
   = help: the trait bound `(): !Sized` is not satisfied

error[E0277]: the size for values of type `()` cannot be known at compilation time
  --> $DIR/opaque-type-unsatisfied-bound.rs:15:1
   |
LL | fn weird0() -> impl Sized + !Sized {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait bound `(): !Sized` is not satisfied

error[E0277]: the size for values of type `()` cannot be known at compilation time
  --> $DIR/opaque-type-unsatisfied-bound.rs:19:16
   |
LL | fn weird1() -> impl !Sized + Sized {}
   |                ^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait bound `(): !Sized` is not satisfied

error[E0277]: the size for values of type `()` cannot be known at compilation time
  --> $DIR/opaque-type-unsatisfied-bound.rs:19:36
   |
LL | fn weird1() -> impl !Sized + Sized {}
   |                                    ^^ doesn't have a size known at compile-time
   |
   = help: the trait bound `(): !Sized` is not satisfied

error[E0277]: the size for values of type `()` cannot be known at compilation time
  --> $DIR/opaque-type-unsatisfied-bound.rs:19:1
   |
LL | fn weird1() -> impl !Sized + Sized {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait bound `(): !Sized` is not satisfied

error[E0277]: the size for values of type `()` cannot be known at compilation time
  --> $DIR/opaque-type-unsatisfied-bound.rs:23:16
   |
LL | fn weird2() -> impl !Sized {}
   |                ^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait bound `(): !Sized` is not satisfied

error[E0277]: the size for values of type `()` cannot be known at compilation time
  --> $DIR/opaque-type-unsatisfied-bound.rs:23:28
   |
LL | fn weird2() -> impl !Sized {}
   |                            ^^ doesn't have a size known at compile-time
   |
   = help: the trait bound `(): !Sized` is not satisfied

error[E0277]: the size for values of type `()` cannot be known at compilation time
  --> $DIR/opaque-type-unsatisfied-bound.rs:23:1
   |
LL | fn weird2() -> impl !Sized {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait bound `(): !Sized` is not satisfied

error[E0277]: the trait bound `impl !Trait: Trait` is not satisfied
  --> $DIR/opaque-type-unsatisfied-bound.rs:12:13
   |
LL |     consume(produce());
   |     ------- ^^^^^^^^^ the trait `Trait` is not implemented for `impl !Trait`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `consume`
  --> $DIR/opaque-type-unsatisfied-bound.rs:9:20
   |
LL | fn consume(_: impl Trait) {}
   |                    ^^^^^ required by this bound in `consume`

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0277`.
